--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "bot.js",
   "author": "pcdateixeira",
   "dependencies": {
-    "discord.js": "^11.4.2",
+    "canvas": "^2.0.1",
+    "discord.js": "^11.4.2"
   }
 }
